0.4.1
Fixed compile with qt6.
Fixed autogen.sh script.
Can now export/unset multiple variables at once eg 'unset foo bar'.

0.4.0
Added 'unset'.
Fixed while ...
Redone select arg in ...
Code clean.
Better parsing of external piped commands.
Reserved "_BC_" for variables and functions.
Done ${variable#}.
Done ${variable##}.
Done ${variable%}.
Done ${variable%%}.
Added ${!foo}.
Done ${variable^^}.
Done ${variable^}.
Done ${variable,,}.
Done ${variable,}.
Done ${variable//xx/zz}.
Done ${variable/xx/zz}.
Done ${#variable}.
Done ${string:position:length}/${string:position}
Started re-entrant variable parsing.
Fixed white space preserving in echo.
Added Show256Cols to examples.
Fixed select.
Fixed '$' in single quotes in pipe.
Added '==' to comparisons ( BASH only ).
Added extra info to verbose code.
Fixed line splitting AGAIN!
Fixed external command string parsing.
Fixed done keyword.
Fixed case keyword.
Capture exit code of last command in pipe.
Better piping of external commands.
Switched to wordexp to parse cli strings.
Speed improvements.

0.3.3
Extra OP options.
Updated help and README.
Can now compilewith qt5 or qt6, see README.
Added '-C' option, see --help.

0.3.2
Can now read output of functions in a while read loop, see example whilereadexample.
Fixed external commands in functions.
Fixed select using a command substitution.
Added pipe and select example.
Added 'select' ( N.B for now needs BASH to be installed ).
SHELL env var now respected when running external commands, defaults to /bin/bash if not set.

0.3.1
Fixed running external apps with pipes.
Parsing tweaks.
OP code tweaks.
Added more echo optimisations.
Output now follows BASH's 'echo' better ie preserving white space excapes chars or not depending if using quotes and -e switch.
Redone function code.
Cleaned up verbose C Code.
Started code output optimization.
Cleaned up verbose C Code.
Cleaned up verbose C Code for functions.
Cleaned up string slicing code op.
Fixed paramaters.
Fixed ${#foo}.