@@ -1,5 +1,6 @@
 
-AM_CPPFLAGS =	-I$(top_srcdir) \
+AM_CPPFLAGS =-I$(top_srcdir) \
+			-include ../src/qtincs.h \
 			$(QT_CFLAGS) \
 			$(QTCORE_CFLAGS) \
 			$(QTWIDGETS_CFLAGS) \
