@@ -21,26 +21,28 @@
 #ifndef _GLOBALS_
 #define _GLOBALS_
 
-#include <QApplication>
-#include <QFile>
-#include <QDir>
-#include <QFileInfo>
-#include <QRegularExpression>
-#include <QVector>
-#include <QTextStream>
-#include <QDate>
-#include <QProcess>
-#include <QDebug>
-
-#include <stdlib.h>
-#include <stdio.h>
-#include <string>
-#include <vector>
-#include <map>
-#include <algorithm>
-#include <fstream>
-#include <iostream>
-#include <wordexp.h>
+#include "qtincs.h"
+//
+//#include <QApplication>
+//#include <QFile>
+//#include <QDir>
+//#include <QFileInfo>
+//#include <QRegularExpression>
+//#include <QVector>
+//#include <QTextStream>
+//#include <QDate>
+//#include <QProcess>
+//#include <QDebug>
+//
+//#include <stdlib.h>
+//#include <stdio.h>
+//#include <string>
+//#include <vector>
+//#include <map>
+//#include <algorithm>
+//#include <fstream>
+//#include <iostream>
+//#include <wordexp.h>
 
 #include "config.h"
 #include "LFSTKPrefsClass.h"
