@@ -1,0 +1,25 @@
+#ifndef _QTINCS_
+#define _QTINCS_
+
+#include <QApplication>
+#include <QFile>
+#include <QDir>
+#include <QFileInfo>
+#include <QRegularExpression>
+#include <QVector>
+#include <QTextStream>
+#include <QDate>
+#include <QProcess>
+#include <QDebug>
+
+#include <stdlib.h>
+#include <stdio.h>
+#include <string>
+#include <vector>
+#include <map>
+#include <algorithm>
+#include <fstream>
+#include <iostream>
+#include <wordexp.h>
+
+#endif
